<resources>
    <string name="app_name">SignOn</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loginButton">Log in</string>
    <string name="registerButton">Register</string>
    <string name="logoTextView">SignOn</string>
    <string name="emailEditText">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="changeEmailButtonText">Change Email</string>
    <string name="changePasswordButtonText">Change Password</string>
    <string name="changeNameButtonText">Change Name</string>
    <string name="changeSignatureButtonText">Change Signature</string>
    <string name="username">USERNAME</string>
    <string name="name">Name:</string>
    <string name="birthday">Date of Birth:</string>
    <string name="joinedOn">Joined on:</string>
    <string name="documentSigned">Document Signed:</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="external_dir">signon</string>
    <string name="captureSignatureNameText">Enter Signature Name:</string>

    <string name="context_delete_title">Select signatures to delete</string>
    <string name="context_delete_item_text">Delete</string>
    <string name="context_update_item_text">Update</string>
    <string name="add">Add</string>
    <string name="sync">Sync</string>
    <string name="loading">Loading...</string>
    <string name="sync_long">Sync with backend</string>
    <string name="add_long">Add a signature</string>

</resources>
