<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.signononlinesignatureapp.signon.IntroActivity"
    android:background="#7622cc">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/button"
        android:background="#50178c"
        android:layout_above="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:height="70dp"
        android:textSize="25dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#50178c"
        android:textColor="#ffffff"
        android:height="70dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logoTextView"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textSize="50dp"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:typeface="serif" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/imageView"
        android:background="#50178c"
        android:layout_alignTop="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/emailEditText"
        android:textAlignment="center"
        android:textColorHint="#b7a9cc"
        android:backgroundTint="#b7a9cc"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="#50178c"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/passwordEditText"
        android:textAlignment="center"
        android:textColorHint="#b7a9cc"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/editText"
        android:textColor="#ffffff" />

</RelativeLayout>
